navbar overlap resolved

--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -63,7 +63,7 @@ path{
 }
 
 .css-4t3x6l-MuiPaper-root-MuiDrawer-paper {
-    background-color: rgb(99,252,216) !important;
+    background-color: rgba(99,252,216,0.7) !important;
 }
 .css-4t3x6l-MuiPaper-root-MuiDrawer-paper .logo{
     margin: 20px auto;
