--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -1,5 +1,5 @@
 .ch #nav {
-    background-color:rgb(89,227,197) !important;
+    background:rgba(89,227,197,0.6) ;
     box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
 }
 
